# HWSW-CD

./: README.md  xparameters.h
HWSW/: stream_matmul_N64.cpp  stream_matmul_dma_app.c  stream_matmul_fixedPoint.cpp
HWSW/.rigel_lopper/: system-top.dts.pp
HWSW/_ide/: .peers.ini  .vitisPlatformRepo.json  settings.json  version.ini  workspace_journal.py  workspace_journal_4119.py  workspace_journal_4460.py  workspace_journal_5223.py  workspace_journal_9852.py
HWSW/app_component/: stream_matmul_dma_app.c
HWSW/app_component/_ide/: hwspec.checksum  launch.json
HWSW/app_component/_ide/bitstream/: design_1_wrapper.bit
HWSW/app_component/src/: UserConfig.cmake  app.yaml  compile_commands.json  stream_matmul_dma_app.c  stream_matmul_dma_app_N64.c  stream_matmul_fixedPoint_dma.cpp
HWSW/hls_component/: compile_commands.json  hls_config.cfg  stream_matmul_N64.cpp  tb_stream_matmul_N64.cpp  vitis-comp.json
HWSW/hls_component/stream_matmul/: stream_matmul.hlscompile_summary  stream_matmul.hlsrun_cosim_summary  stream_matmul.hlsrun_csim_summary  stream_matmul.hlsrun_package_summary  vitis-comp.json
HWSW/hls_component/stream_matmul/hls/: config.cmdline  hls_data.json
HWSW/hls_component/stream_matmul/hls/impl/ip/drivers/stream_matmul_v1_0/src/: CMakeLists.txt  xstream_matmul.h
HWSW/lab1/: design_1_wrapper.xsa  lab1.xpr
HWSW/lab1_fixedPoint/: design_1_wrapper.xsa  lab1_fixedPoint.xpr
HWSW/platform/: vitis-comp.json
HWSW/platform/zynq_fsbl/: CMakeLists.txt  app.yaml  compile_commands.json
HWSW/project_matmul/: design_1_wrapper.xsa  project_matmul.xpr
(+1619 files in other folders)
